src/style.css
/*
 *   CSS colours based on https://mozilla.ninja/visualelements/
 */
body {
	font-family: 'Fira Sans', sans-serif;
	font-size: 14px;
	font-weight: 300;
	margin: 20px;
	white-space: nowrap;
}

a {
	color: #ff4f5e; /* Warm red */
}

/*
 * CSS for diff viewer and file virwer
 */
.file-path {
	color: white;
	font-weight: bold;
}
.file-summary {
	background-color: black;
	padding: 0.8em;
}

/*
 *  CSS for diff viewer
 */
/* XXX: The lines inside of pre overrun if the window is very little */
pre { margin: 0; }
.codecoverage-diffviewer table,th,tr,td {
	border-collapse: collapse;
	padding: 0px;
}
.return-home {
	margin: 0em 0em 1em;
}
.coverage-meta {
	display: flex;
	flex-direction: column;
	margin: 0em 0em 1em;
	min-width: 530px;
	max-width: 600px;
}
.coverage-meta-row {
	display: flex;
	justify-content: space-between;
}
.parent-meta-subtitle {
	font-weight: 400;
	text-align: left;
}
.meta {
	flex-direction: row;
}
.meta-right {
	text-align: right;
}
.diff-block {
	border: 1px solid #eaeaea;
}
.diff-block-table {
	margin: 0.5em;
}
.diff-cell {
	color: #959595; /* Dark grey */
	padding: 0px 0.4em 0px 0px;
}
.diff-file {
	margin: 0em 0em 1em;
	min-width: 530px;
	width: 100%;
}
.diff-line-at {
	background-color: #959595; /* Dark grey */
	font-weight: 400;
	padding: 0.3em;
}
/* Diff viewer meta */
.diff-meta, .net-coverage-meta, .parent-meta {
	margin-bottom: 10px;
}
.net-lines-coverage-change {
	display: block;
	font-weight: bold;
	font-size: 14px;
}
/* Line coverage status*/
.hit, .miss, .nocovchange {
	width: 20px;
}
.hit {
	background-color:#b6fc88;
}
.miss {
	background-color:#f9c8c5;
}
.nocovchange {
	background-color:#fff;
}
/* Line numbers */
.old-line-number, .new-line-number {
	text-align: right
}

/*
 *  CSS for main view
 */
.app-disclaimer {
	background-color: #54ffbd;
	background-color: rgba(84, 255, 189, 0.1);
	font-style: italic;
	margin: 0em 0em 1em;
	padding: 1em;
}
.polling-status {
	/* Lemon yellow */
	background-color: #fff44f; /* Fallback */
	background-color: rgba(255, 244, 79, 0.3);
	font-style: italic;
	font-weight: 400;
	margin: 0em 0em 1em;
	padding: 1em;
	text-align: center;
}
.changeset-viewer {
	border-spacing: 0px;
	margin: auto;
}
.error-message {
	color:#ff0000
}

/* Changesets */
.hidden_changeset {
	display: none
}

.changeset-summary {
	text-align: center;
}
.low-coverage {
	/* Warm red */
	background-color: #ff4f5e; /* Fallback */
	background-color: rgba(255, 79, 94, 0.3);
}
.medium-coverage {
	/* Lemon yellow */
	background-color: #fff44f; /* Fallback */
	background-color: rgba(255, 244, 79, 0.3);
}
.high-coverage {
	/* Neon green */
	background-color: #54ffbd; /* Fallback */
	background-color: rgba(84, 255, 189, 0.3);
}


/*
 *  CSS for file viewer
 */
.file-meta-center {
	background-color: #f5f9fa; /* Light blue */
	overflow: hidden;
}
.file-meta-status {
	float: right;
	border-bottom: 2px solid #3f87a6; /* Dark blue */
	margin-top: 15px;
	margin-right: 40px;
}
.file-meta-ul {
	float: right;
  padding: 0;
	margin: 0;
  width: auto;
}
.file-meta-li {
	display: inline-block;
	margin: 0 10px;
	width: 140px;
	font-weight: bold;
}
.file-meta-title {
	font-weight: bold;
	font-size: 2rem;
	padding: 40px 40px 10px;
}
.file-meta-revision {
	background-color: #959595; /* Dark grey */
	font-weight: 400;
	padding: 0.3em 0.8em;
}
.error_message {
	color: red;
}

.file-view {
	display: inline-block;
	min-width: 1000px;
}
.file-view-table {
	border: 1px solid #eaeaea;
	border-spacing: 0;
	border-collapse: collapse;
	display: block;
	margin-top: 10px;
}
tr.file_line {
	height: 18px;
	border-bottom: 2px solid transparent;
}
tr.file_line:hover {
	border-bottom: 2px solid #83d0f2; /* Sky blue */
}
tr.selected {
	border-bottom: 2px solid #3f87a6 !important; /* Dark blue */
}
td.file_line_number, td.file_line_tests {
	width: 40px;
	border-right:1px solid #eaeaea;
	color: Grey;
	text-align: center;
	/*padding: 1px;*/
}
td.file_line_text {
	padding-left: 5px;
}
span.tests {
	background: #21ba45;
  border-radius: 10px;
  color: #ffffff;
	display: inline-block;
  text-align: center;
	font-size: 0.8em;
	padding: 1.5px;
	min-width: 13px;
}

/* file view right-siderbar */
.tests_viewer {
	position: fixed;
	top: 0;
	bottom: 0;
	right: 0;
	width: 240px;
	border-left: solid 6px #eaeff2;
	border-image: linear-gradient(#fff, #eaeff2 20%, #eaeff2 80%, #fff) 10;
	padding-left: 20px;
	overflow-y: scroll;
}

/* file view coverage percentage */
div.coverage_meta {
	position: fixed;
	top:20px;
	right: 280px;
}
div.coverage_meta_totals {
	border: 1px solid #d4d4d5;
	border-radius: 0.20rem;
	padding-top: 1.0em;
	padding-right: 0.3em;
	padding-bottom: 1.0em;
	padding-left: 0.3em;
	float: right;
}
span.percentage_covered {
	border-radius: 0.25rem;
	color: rgb(0, 0, 0);
	font-size: 1em;
	padding-top: 0.6em;
	padding-right: 0.8em;
	padding-bottom: 0.6em;
	padding-left: 0.8em;
	margin: 0.05em;
}

